--- a/timerForCompletion.css
+++ b/timerForCompletion.css
@@ -1,3 +1,8 @@
+body{
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #holder {
     position: relative;   /* leave as "relative" to keep timer centered on your
                              page, or change to "absolute" then change the
@@ -80,14 +85,20 @@
 .c{
    float: right;
 }
-span{
+.data{
   margin-left:15%;
   margin-top: 10px;
   margin-bottom: 10px;
+  color:#1affff;
+}
+
+.nav.navbar-nav li a:hover{
+  background-color: rgb(117, 198, 229);
 }
 #questionname{
   text-align: left;
   margin-left:10%;
+  color:#99ff66;
  }
 ul{
   list-style-type:disc;
@@ -100,26 +111,10 @@ li a {
 }
 #totalTime{
   text-align: center;
+  color: #3333ff;
 }
-.ghost-button-thick-border {
-  display: inline-block;
-  width: 100px;
-  font-weight: bold;
-  padding: 3px;
-  color: #fff;
-  border: 3px solid #fff;
-  text-align: center;
-  outline: none;
-  text-decoration: none;
-  transition: background-color 0.2s ease-out,
-              color 0.2s ease-out;
-}
-.ghost-button-thick-border:hover,
-.ghost-button-thick-border:active {
-  background-color: #fff;
-  color: #000;
-  transition: background-color 0.3s ease-in,
-              color 0.3s ease-in;
+span{
+  color: #1affff;
 }
 
 input{
@@ -127,14 +122,12 @@ input{
   border-color: #ff4d4d;
   color:#ff4d4d;
 }
-input:focus{
-  background-color: #ff4d4d;
-  border-color: white;
-  color:white;
-}
+
 
  #next{
    width:  55px;
    height: 55px;
    margin-left: 25px;
+   background-blend-mode: color-burn;
+
  };
