--- a/css/question.css
+++ b/css/question.css
@@ -16,10 +16,13 @@ body{
     top: 10px;            /* change to position the timer */
     left: 0px;            /* change to position the timer; must also change
                              position to "absolute" above */
-    width: 270px;
+    width: 200px;
     height: 60px;
     border: none;
-    margin: 10px auto;
+    /*margin: 10px auto;
+*/
+margin-left: -10px;
+margin-right: -10px;
 }
 
 #title, #note {
@@ -64,12 +67,12 @@ body{
     position: relative;
     top: 0px;
     left: 0px;
-    margin: 5px auto;
+     margin-left: -60px;
     text-align: center;
     width: 260px;
     height: 38px;
     border: none;
-    padding: 5px 35px 5px 3px;
+    /*padding: 5px 35px 5px 3px;*/
     background: #000000;    /* may change to another color, or to "transparent" */
     border-radius: 20px;
     box-shadow: 0 0 10px #000000; /* change to "none" if you don't want a shadow */
@@ -101,8 +104,7 @@ body{
      margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    font-size: 25px;
-
+    font-size: 18px;
  }
 
 
@@ -111,14 +113,14 @@ body{
    opacity: 0.73;
    margin-right: 1%;
 }
-
+/*
 .b{
   position: absolute;
   right: 4%;
   top:20%;
   float: right;
-  margin-right: 5%;
-}
+   margin-right: 5%;
+}*/
 /*
 .c{
    position: absolute;
@@ -131,7 +133,6 @@ body{
  }*/
 #questionname{
   text-align: center;
-
   font-family: myFirstFont;
   letter-spacing: 1px;
   word-spacing: 5px;
@@ -140,20 +141,18 @@ body{
  }
 
 #totalTime{
-  text-align: center;
+  text-align: left;
   font-family: myFirstFont;
   letter-spacing: 2px;
   word-spacing: 10px;
-  border: 1px solid #C0C0C0;
-  color: #C0C0C0;
+   color: #C0C0C0;
 }
 span{
   color: #bf8040;
   font-family: myFirstFont;
-  word-spacing: 4px;
-  letter-spacing: 2px;
-  margin: 2px;
-}
+  word-spacing: 2.5px;
+  letter-spacing: 1px;
+ }
 
 input{
     border-color: #C0C0C0;
@@ -165,6 +164,11 @@ input{
    height: 85px;
    margin-left: 25px;
   };
+
+
+.image{
+    color: #C0C0C0;
+  }
 
   .btn {
       border-radius: 0;
